# django-docker-template

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  TESTING.md  TUTORIAL.md  changelog.md  docker-compose.yml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/catalog/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
examples/catalog/tests/: test_models.py  test_serializers.py  test_views.py
scripts/: run-integration-tests.sh
src/: .dockerignore  conftest.py  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements.txt
src/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/accounts/management/commands/: setup_groups.py  test_integration.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_auth.py  test_models.py  test_permissions.py  test_serializers.py  test_views_groups.py  test_views_users.py
src/health/: checks.py  views.py
src/health/tests/: test_health.py
src/logging_utils/: filters.py  formatters.py
src/logging_utils/tests/: test_logging.py
src/main/: logging.py  settings.py  urls.py
